WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192111
SQLiteDatabase::open is constantly printing "SQLite database failed to checkpoint: database table is locked" errors
https://bugs.webkit.org/show_bug.cgi?id=192111
Summary
SQLiteDatabase::open is constantly printing "SQLite database failed to checkp...
Christopher Reid
Reported
2018-11-28 15:17:12 PST
See
https://build.webkit.org/builders/Apple%20Mojave%20Debug%20WK2%20%28Tests%29/builds/686/steps/layout-test/logs/stdio
. There's over 2000 instances of these errors consistent across all platforms.
Attachments
patch
(2.98 KB, patch)
2018-11-28 15:20 PST
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
Fixing indents
(2.95 KB, patch)
2018-11-28 15:26 PST
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Christopher Reid
Comment 1
2018-11-28 15:20:57 PST
Created
attachment 355925
[details]
patch
EWS Watchlist
Comment 2
2018-11-28 15:23:40 PST
Attachment 355925
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/sql/SQLiteDatabase.cpp:118: preprocessor directives (e.g., #ifdef, #define, #import) should never be indented. [whitespace/indent] [4] ERROR: Source/WebCore/platform/sql/SQLiteDatabase.cpp:119: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebCore/platform/sql/SQLiteDatabase.cpp:122: preprocessor directives (e.g., #ifdef, #define, #import) should never be indented. [whitespace/indent] [4] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Christopher Reid
Comment 3
2018-11-28 15:26:15 PST
Created
attachment 355928
[details]
Fixing indents
WebKit Commit Bot
Comment 4
2018-11-28 17:39:28 PST
Comment on
attachment 355928
[details]
Fixing indents Clearing flags on attachment: 355928 Committed
r238652
: <
https://trac.webkit.org/changeset/238652
>
WebKit Commit Bot
Comment 5
2018-11-28 17:39:29 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-11-28 17:41:19 PST
<
rdar://problem/46328240
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug