SQLiteDatabase::open is constantly printing "SQLite database failed to checkpoint: database table is locked" errors https://bugs.webkit.org/show_bug.cgi?id=192111

Reviewed by Alex Christensen.

Ensure the journal_mode=WAL statement is finalized before wal_checkpoint is executed.

* platform/sql/SQLiteDatabase.cpp:
(WebCore::SQLiteDatabase::open):


Canonical link: https://commits.webkit.org/206802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238652 268f45cc-cd09-0410-ab3c-d52691b4dbfc